Revert "fix register endpoint again"
This reverts commit 7eebf3ae0aab841694fad6ca36103b38808c1cf9.